sumo/tests/sumo/pedestrian_model/nonInteracting/errors/testsuite.sumo
disconnected_trip

# Copy of disconnected_trip
disconnected_trip_ignore
